// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailEntry rendering renders expected elements 1`] = `
<div
  className="DetailEntry TestClass"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="test"
      text="Test Label"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--column TestValueClass"
    id="test"
    title="TestValueTitle"
  >
    test value
  </div>
</div>
`;

exports[`DetailEntry rendering renders expected elements when children are specified 1`] = `
<div
  className="DetailEntry TestClass"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="test"
      text="Test Label"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--column TestValueClass"
    id="test"
  >
    Test Children
  </div>
</div>
`;

exports[`DetailEntry rendering renders expected elements when className and valueClass are not set 1`] = `
<div
  className="DetailEntry"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="test"
      text="Test Label"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--column"
    id="test"
  >
    test value
  </div>
</div>
`;

exports[`DetailEntry rendering renders expected elements when direction is row 1`] = `
<div
  className="DetailEntry TestClass"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="test"
      text="Test Label"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--row TestValueClass"
    id="test"
  >
    test value
  </div>
</div>
`;

exports[`DetailEntry rendering renders expected elements when infoText is set 1`] = `
<div
  className="DetailEntry"
>
  <div
    className="DetailEntry__label"
  >
    <Label
      htmlFor="test"
      text="Test Label"
    />
    <InfoTooltip
      placement="bottom"
      text="Test info"
    />
  </div>
  <div
    className="DetailEntry__value DetailEntry--column"
    id="test"
  >
    test value
  </div>
</div>
`;
